@@ -3,6 +3,8 @@ NEWS - OpenPrinting CUPS Filters v1.0.29 - 2013-01-02
 
 CHANGES IN V1.0.30
 
+	- texttopdf: Fixed corrupted pdf when a utf-8 title is given and
+	  corresponding crash with 'prettyprint' (Ubuntu Bug 1137438).
 	- cups-browsed: Added CUPS Broadcasting for sharing local printers
 	  to remote CUPS clients with CUPS 1.5.x and older. Thanks to Tim
 	  Waugh from Red Hat.
